adjusted mount api